--- a/index.html
+++ b/index.html
@@ -9,11 +9,19 @@
 </head>
 <body>
     <div class="header">
-        <div>Header Logo</div>
+        <div class="he">Header Logo</div>
         <ul class="links">
             <li><a href="#">Header link one</a></li>
             <li><a href="#">Header link two</a></li>
             <li><a href="#">Header link three</a></li>
         </ul>
+        </div>  
+    <div class="aheader">
+        <div class="box"><div class="text">This webside is awesome</div>
+        <div>this website has some subtext that goes here under the main title. It's a smaller font and the color is lower contrast</div>
+        <button class="sign">Sign up</button>
+        </div>
+        <div class="img">this is a placeholder for an image</div>
+    </div>
 </body>
 </html>
