--- a/index.html
+++ b/index.html
@@ -23,5 +23,47 @@
         </div>
         <div class="img">this is a placeholder for an image</div>
     </div>
+    <div class="textt"> Some random information</div>
+
+    <div class="container">
+        <div class="info">
+        <div class="card"></div>
+        <div>some subtext for the image</div>
+    </div>
+    <div class="info">
+        <div class="card"></div>
+        <div >some subtext for the image</div>
+    </div>
+    <div class="info">
+        <div class="card"></div>
+        <div>some subtext for the image</div>
+    </div>
+    <div class="info">
+        <div class="card"></div>
+        <div>some subtext for the image</div>
+    </div>
+    </div>
+
+    <div class="review">
+        <div class="content">
+            <div class="les">this is an inspiring quote, or a testimonial from a customer. 
+                Maybe it's just felling up space, or maybe people will actually read it Who knows? All I know is that it looks nice. </div></div>
+            <div class="podpis"> <div class="potpis">-Thor, God of fortnite</div>   </div> 
+       
+    </div>
+
+    <div class="afooter">
+        <div class="boxik">
+            <div class="call">
+                <div class="calli">Call to action! it's time!</div>
+                <div class="smalll">Sign up for our product by clicking that button right over there!</div>
+            </div>
+            <button class="up">Sign up</button>
+        </div>
+    </div>
+
+    <div class="footer">
+        <div>Copyright The Odin Project 2021</div>
+      </div>
 </body>
 </html>
